--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>593</width>
-    <height>331</height>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,7 +23,7 @@
       </sizepolicy>
      </property>
      <property name="pixmap">
-      <pixmap resource="../bitcoin.qrc">:/images/about</pixmap>
+      <pixmap>:/images/about</pixmap>
      </property>
     </widget>
    </item>
@@ -63,7 +63,7 @@
           <cursorShape>IBeamCursor</cursorShape>
          </property>
          <property name="text">
-          <string notr="true">0.3.666-beta</string>
+          <string notr="true">0.6.4.1-beta</string>
          </property>
          <property name="textFormat">
           <enum>Qt::RichText</enum>
@@ -94,19 +94,7 @@
         <cursorShape>IBeamCursor</cursorShape>
        </property>
        <property name="text">
-        <string>
-          Copyright © 2009-2012 Bitcoin Developers
-          Copyright © 2011-2012 Litecoin Developers
-          Copyright © 2013 KittehCoin Developers
-
-          This is experimental software.
-
-          Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php.
-
-          This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/) and cryptographic software written by Eric Young (eay@cryptsoft.com) and UPnP software written by Thomas Bernard.
-
-          Offical forum: not exist
-        </string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;br/&gt;&lt;br&gt;Copyright © 2009-2012 Bitcoin Developers&lt;br&gt;          Copyright © 2011-2012 Litecoin Developers&lt;br&gt;          Copyright © 2013 KittehCoin Developers&lt;br/&gt;&lt;br&gt;This is experimental software.&lt;br/&gt;&lt;br&gt;Distributed under the MIT/X11 software license, see the accompanying file COPYING or http://www.opensource.org/licenses/mit-license.php.&lt;br/&gt;&lt;br&gt;This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit (http://www.openssl.org/) and cryptographic software written by Eric Young (eay@cryptsoft.com) and UPnP software written by Thomas Bernard.&lt;br/&gt;&lt;br&gt;&lt;center&gt;Offical Website: &lt;a href=&quot;http://kittehcoin.info&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;http://kittehcoin.info&lt;/span&gt;&lt;/a&gt;&lt;center&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
@@ -143,9 +131,7 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../bitcoin.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>buttonBox</sender>
