Windows Wallet support. Logos
- Updated code to support windows wallet (using BOOST 1.55)
- Splash Screen logos fixed + transparency
- Logo added to wallet overview

--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -189,6 +189,25 @@
          </layout>
         </widget>
        </item>
+	 			<item>
+         <widget class="QLabel" name="label_wallet_bgcoin">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="pixmap">
+           <pixmap resource="../bitcoin.qrc">:/images/wallet_bgcoin</pixmap>
+          </property>
+          <property name="scaledContents">
+           <bool>false</bool>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+          <property name="margin">
+           <number>-2</number>
+          </property>
+         </widget>
+        </item>
        <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
@@ -197,7 +216,7 @@
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
-           <height>40</height>
+           <height>2</height>
           </size>
          </property>
         </spacer>
