Wallet updates. Copyrights and Website under help
- Correct Copyrights to include Litecoin Devs + Year fix
- Website added to help menu

--- a/src/qt/forms/aboutdialog.ui
+++ b/src/qt/forms/aboutdialog.ui
@@ -92,6 +92,7 @@
        </property>
        <property name="text">
         <string notr="true">Copyright &amp;copy; 2009-YYYY The Bitcoin developers
+        Copyright &amp;copy; 2009-YYYY The LiteCoin developers
 Copyright &amp;copy; 2011-YYYY The KittehCoin developers</string>
        </property>
        <property name="textFormat">
